# Ahri-bot

./: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml
data/: user_id.json
src/: autocomplete.rs  board_controller.rs  db_manager.rs  enroll_controller.rs  game.rs  main.rs  make_game.rs  make_game_controller.rs  player_manager.rs  shared.rs
src/db/: inmemory_db.rs  mod.rs  supabase_db.rs
src/legacy/: game.rs  migration.rs  mod.rs  rollback.rs
