[package]
name = "ahribot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12" }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
poise = { git="https://github.com/serenity-rs/poise", branch="next" }
futures = { version = "0.3.13", default-features = false }
futures-util = { version = "0.3.13", default-features = false }
rand = { version = "0.8.5" }
serde = { version = "1.0.59", features = ["derive"] }
serde_json = { version = "1.0.59" }
itertools = { version = "0.12.0" }
glicko2 = { version = "0.3.1" }
dotenv = { version = "0.15.0" }